# Fraktal

./: .gitignore  LICENSE  README.md  TOGGLE_FEATURE_SUMMARY.md  build_cython.bat  build_cython.ps1  build_cython_quick.bat  pyproject.toml  requirements.txt  setup.py  setup_cython.py
.github/workflows/: ci.yml
config/: default.yaml
dash_app/: app.py
dash_app/components/: __init__.py  mandelbrot_components.py  mandelbrot_helpers.py
dash_app/pages/: explorer.py  home.py  mandelbrot.py
docs/: building-cython.md  cython-integration-guide.md  dash-app-user-guide.md  dynamic-explorer-proposal.md  leaflet-explorer-feature.md
docs/cython-experiments/: CYTHON_IMPLEMENTATION.md  cython-build-instructions.md  cython-integration-guide.md  cython-performance-analysis.md  cython-vs-numba-conclusion.md
fraktal/: __init__.py  __init__.pyi  config.py  decorators.py  mandelbrot.py  mapping.py
fraktal.egg-info/: SOURCES.txt
fraktal/engines/: color_index.py  coloring.py  image.py  mandelbrot.py  mandelbrot_cy.c  mandelbrot_cy.html  mandelbrot_cy.pyi  mandelbrot_cy.pyx  mandelbrot_cy_optimized.c  mandelbrot_cy_optimized.html  mandelbrot_cy_optimized.pyx  orbit.py  orbit_cy.c  orbit_cy.html  orbit_cy.pyi  orbit_cy.pyx  palette.py  seed.py  seed_cy.c  seed_cy.html  seed_cy.pyi  seed_cy.pyx  window.py
fraktal/fraktal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_color_index.py  test_config.py  test_cython_integration.py  test_dash_cython_toggle.py  test_decorators.py  test_image.py  test_iteration_count.py  test_palette.py  test_set_generation.py
(+9 files in other folders)
