
[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraktal"
version = "0.0.1"
description = "Fraktal library and Dash app"
authors = [ { name = "HFlo" } ]
license = "MIT"

[tool.setuptools]
packages = ["fraktal"]

[tool.pytest]
minversion = "6.0"
