
[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=0.29.0", "numpy>=1.22"]
build-backend = "setuptools.build_meta"

[project]
name = "fraktal"
version = "0.0.1"
description = "Fraktal library and Dash app"
authors = [ { name = "HFlo" } ]
license = "MIT"

[tool.setuptools]
# Use setuptools package discovery to include all subpackages (engines, models, etc.)
[tool.setuptools.packages.find]
include = ["fraktal*"]

[tool.pytest]
minversion = "6.0"
